syntax = "proto3";

package proto;

import "github.com/relab/gorums/gorums.proto";
import "google/protobuf/empty.proto";

service HotstuffLeader {
	rpc Broadcast(Msg) returns (Msg) {
		option (gorums.qc) = true;
		option (gorums.qf_with_req) = true;
		option (gorums.custom_return_type) = "QuorumCert";
	}
}

service HotstuffReplica {
	rpc NewView(Msg) returns (google.protobuf.Empty);
}

enum Type {
	GENERIC = 0;
	PREPARE = 1;
	PRE_COMMIT = 2;
	COMMIT = 3;
	DECIDE = 4;
	NEW_VIEW = 5;
}

message Msg {
	Type Type = 1;
	int32 ViewNumber = 2;
	HSNode Node = 3;
	QuorumCert Justify = 4;
}

message QuorumCert {
	Type Type = 1;
	int32 ViewNumber = 2;
	HSNode Node = 3;
	string Sig = 4;
}

message HSNode {
	string ParentHash = 1;
	string Command = 2;
}
